[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "postmodern-api"
version = "0.1.0"
description = "The Postmodern wire protocol — the byte-identical contract shared by the chat server, the account server, and clients."
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = ["pynacl>=1.5"]

# Installs a top-level `wire` module, so every consumer keeps `import wire` unchanged.
[tool.setuptools]
py-modules = ["wire"]
