[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "postmodern-api"
version = "0.2.0"
description = "The Postmodern wire protocol — the byte-identical contract shared by the chat server, the account server, and clients."
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = ["pynacl>=1.5"]

# Only for regenerating + replaying the shared fuzz corpus (gen_fuzz_corpus.py,
# tests/). Not needed to USE the wire/pcm modules.  pip install -e ".[dev]"
[project.optional-dependencies]
dev = ["hypothesis>=6", "pytest>=8"]

# Top-level modules, so consumers keep `import wire` / `import pcm` unchanged.
#   wire — signed-event bytes, vouchers, anon-tokens, canonical JSON, blob descriptors
#   pcm  — the PCM comment/markdown normalizer (franking-critical; Dart-mirrored)
[tool.setuptools]
py-modules = ["wire", "pcm"]
